force-app/main/default/objects/Loan_Applicant__c/fields/BL_Women_as__c.field-meta.xml
<CustomField>
    <fullName>BL_Women_as__c</fullName>
    <label>Women as</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proprietor</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Shareholder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>