force-app/main/default/objects/Loan_Applicant__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Scheduled Caste (SC)</fullName>
            </value>
            <value>
                <fullName>Scheduled Tribe (ST)</fullName>
            </value>
            <value>
                <fullName>Minority</fullName>
            </value>
            <value>
                <fullName>Other Backward Caste(OBC)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>