force-app/main/default/objects/Loan_Applicant__c/fields/CFR_Verification__c.field-meta.xml
<CustomField>
    <fullName>CFR_Verification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CFR Verification</label>
    <referenceTo>Verification__c</referenceTo>
    <relationshipLabel>Loan Applicants (CFR Verification)</relationshipLabel>
    <relationshipName>CFR_Loan_Applicants</relationshipName>
    <type>Lookup</type>
</CustomField>