force-app/main/default/objects/Loan_Applicant__c/fields/Cibil_Verification__c.field-meta.xml
<CustomField>
    <fullName>Cibil_Verification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cibil Verification</label>
    <referenceTo>Verification__c</referenceTo>
    <relationshipLabel>Loan Applicants (Cibil Verification)</relationshipLabel>
    <relationshipName>Loan_Applicants3</relationshipName>
    <type>Lookup</type>
</CustomField>