force-app/main/default/objects/Loan_Applicant__c/fields/CIF__c.field-meta.xml
<CustomField>
    <fullName>CIF__c</fullName>
    <label>CIF</label>
    <length>200</length>
    <type>Text</type>
</CustomField>