force-app/main/default/objects/Loan_Applicant__c/fields/Consent_Verification__c.field-meta.xml
<CustomField>
    <fullName>Consent_Verification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consent Verification</label>
    <referenceTo>Verification__c</referenceTo>
    <relationshipLabel>Loan Applicants (Consent Verification)</relationshipLabel>
    <relationshipName>Loan_Applicants5</relationshipName>
    <type>Lookup</type>
</CustomField>