force-app/main/default/objects/Loan_Applicant__c/fields/Current_Residential_Address__c.field-meta.xml
<CustomField>
    <fullName>Current_Residential_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Residential Address</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Loan Applicants</relationshipLabel>
    <relationshipName>Loan_Applicants</relationshipName>
    <type>Lookup</type>
</CustomField>