force-app/main/default/objects/Loan_Applicant__c/fields/Current_Residential_Address_Verified__c.field-meta.xml
<CustomField>
    <fullName>Current_Residential_Address_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Current Residential Address Verified</description>
    <inlineHelpText>Current Residential Address Verified via TVR</inlineHelpText>
    <label>Current Residential Address Verified</label>
    <type>Checkbox</type>
</CustomField>