force-app/main/default/objects/Loan_Applicant__c/fields/Date_of_birth_of_Spouse__c.field-meta.xml
<CustomField>
    <fullName>Date_of_birth_of_Spouse__c</fullName>
    <label>Date of birth of Spouse</label>
    <type>Date</type>
</CustomField>