force-app/main/default/objects/Loan_Applicant__c/fields/Date_Of_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Incorporation__c</fullName>
    <label>Date Of Incorporation</label>
    <type>Date</type>
</CustomField>