force-app/main/default/objects/Loan_Applicant__c/fields/Dedupe_Verification__c.field-meta.xml
<CustomField>
    <fullName>Dedupe_Verification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dedupe Verification</label>
    <referenceTo>Verification__c</referenceTo>
    <relationshipLabel>Loan Applicants (Dedupe Verification)</relationshipLabel>
    <relationshipName>Loan_Applicants1</relationshipName>
    <type>Lookup</type>
</CustomField>