force-app/main/default/objects/Loan_Applicant__c/fields/Driving_Licence__c.field-meta.xml
<CustomField>
    <fullName>Driving_Licence__c</fullName>
    <label>Driving Licence</label>
    <length>200</length>
    <type>Text</type>
</CustomField>