force-app/main/default/objects/Loan_Applicant__c/fields/Employer_Detail__c.field-meta.xml
<CustomField>
    <fullName>Employer_Detail__c</fullName>
    <label>Employer Detail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public Sector(PSU)</fullName>
            </value>
            <value>
                <fullName>Central Government(CTG)</fullName>
            </value>
            <value>
                <fullName>State Government(STG)</fullName>
            </value>
            <value>
                <fullName>Multinational(MNC)</fullName>
            </value>
            <value>
                <fullName>Public Ltd Co(PUB)</fullName>
            </value>
            <value>
                <fullName>Pvt Ltd/Ltd(PVT)</fullName>
            </value>
            <value>
                <fullName>Partnership(PAR)</fullName>
            </value>
            <value>
                <fullName>Proprietorship(POR)</fullName>
            </value>
            <value>
                <fullName>Others(OTR)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>