force-app/main/default/objects/Loan_Applicant__c/fields/Father_Spouse_Name__c.field-meta.xml
<CustomField>
    <fullName>Father_Spouse_Name__c</fullName>
    <label>Father/Spouse Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>