force-app/main/default/objects/Loan_Applicant__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Transgender</fullName>
            </value>
            <value>
                <fullName>NOT APPLICABLE</fullName>
                <isActive>false</isActive>
                <label>NOT APPLICABLE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>