force-app/main/default/objects/Loan_Applicant__c/fields/Gross_Annual_Income__c.field-meta.xml
<CustomField>
    <fullName>Gross_Annual_Income__c</fullName>
    <label>Gross Annual Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>