force-app/main/default/objects/Loan_Applicant__c/fields/GST_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>GST_Registration_Number__c</fullName>
    <label>GST Registration Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>