force-app/main/default/objects/Loan_Applicant__c/fields/Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>Identification_Number__c</fullName>
    <label>Identification Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>