force-app/main/default/objects/Loan_Applicant__c/fields/Income_from_Agriculture__c.field-meta.xml
<CustomField>
    <fullName>Income_from_Agriculture__c</fullName>
    <label>Income from Agriculture</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>