force-app/main/default/objects/Loan_Applicant__c/fields/Industry_Type__c.field-meta.xml
<CustomField>
    <fullName>Industry_Type__c</fullName>
    <label>Industry Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Coal</fullName>
            </value>
            <value>
                <fullName>OIL</fullName>
            </value>
            <value>
                <fullName>Automobile</fullName>
            </value>
            <value>
                <fullName>Retail Jewellery</fullName>
            </value>
            <value>
                <fullName>Fisheries / Poultry</fullName>
            </value>
            <value>
                <fullName>Transportation/logistics</fullName>
            </value>
            <value>
                <fullName>Textiles/Garment</fullName>
            </value>
            <value>
                <fullName>Fertilizer/Chemicals/seeds/pesticides</fullName>
            </value>
            <value>
                <fullName>Petrol Pump</fullName>
            </value>
            <value>
                <fullName>Furniture/timber</fullName>
            </value>
            <value>
                <fullName>Cement/Paint</fullName>
            </value>
            <value>
                <fullName>IT/Software/BPO</fullName>
            </value>
            <value>
                <fullName>Printing/Publishing</fullName>
            </value>
            <value>
                <fullName>Electronics/Computer Hardware</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Broking</fullName>
            </value>
            <value>
                <fullName>Engineering Goods</fullName>
            </value>
            <value>
                <fullName>media/Entertainment</fullName>
            </value>
            <value>
                <fullName>Travel/Tour Agency</fullName>
            </value>
            <value>
                <fullName>Issue &amp; Portfolio Management</fullName>
            </value>
            <value>
                <fullName>Advertising Agency</fullName>
            </value>
            <value>
                <fullName>Pharmaceutical</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Marble / Granite</fullName>
            </value>
            <value>
                <fullName>Hospital/Nursing Home /Clinic</fullName>
            </value>
            <value>
                <fullName>Consultancy</fullName>
            </value>
            <value>
                <fullName>Restaurant</fullName>
            </value>
            <value>
                <fullName>Hotels / Resort</fullName>
            </value>
            <value>
                <fullName>Steel / Hardware</fullName>
            </value>
            <value>
                <fullName>Agricultural Commodities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>