force-app/main/default/objects/Loan_Applicant__c/fields/Is_Related_Party__c.field-meta.xml
<CustomField>
    <fullName>Is_Related_Party__c</fullName>
    <label>Is Related Party</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>