force-app/main/default/objects/Loan_Applicant__c/fields/KYC_Document_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>KYC_Document_Type_Name__c</fullName>
    <label>KYC Document Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>