force-app/main/default/objects/Loan_Applicant__c/fields/Leegality_Verification__c.field-meta.xml
<CustomField>
    <fullName>Leegality_Verification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leegality Verification</label>
    <referenceTo>Verification__c</referenceTo>
    <relationshipLabel>Loan Applicants (Leegality Verification)</relationshipLabel>
    <relationshipName>Loan_Applicants7</relationshipName>
    <type>Lookup</type>
</CustomField>