force-app/main/default/objects/Loan_Applicant__c/fields/MCA_Document_Verification__c.field-meta.xml
<CustomField>
    <fullName>MCA_Document_Verification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MCA Document Verification</label>
    <referenceTo>Verification__c</referenceTo>
    <relationshipLabel>Loan Applicants (MCA Document Verification)</relationshipLabel>
    <relationshipName>MCA_Loan_Applicants</relationshipName>
    <type>Lookup</type>
</CustomField>