force-app/main/default/objects/Loan_Applicant__c/fields/Monthly_Income__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Income__c</fullName>
    <label>Monthly Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>