force-app/main/default/objects/Loan_Applicant__c/fields/Name_of_Previous_Organisation__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Previous_Organisation__c</fullName>
    <label>Name of Previous Organisation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>