force-app/main/default/objects/Loan_Applicant__c/fields/Name_of_the_Bank__c.field-meta.xml
<CustomField>
    <fullName>Name_of_the_Bank__c</fullName>
    <label>Name of the Bank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>