force-app/main/default/objects/Loan_Applicant__c/fields/Nature_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Business__c</fullName>
    <label>Nature of Business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SPECIALISED CONSTRUCTION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>