force-app/main/default/objects/Loan_Applicant__c/fields/No_of_years_at_current_job__c.field-meta.xml
<CustomField>
    <fullName>No_of_years_at_current_job__c</fullName>
    <label>No of years at current job</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>