force-app/main/default/objects/Loan_Applicant__c/fields/No_of_Years_in_previous_business__c.field-meta.xml
<CustomField>
    <fullName>No_of_Years_in_previous_business__c</fullName>
    <label>No. of Years in previous business</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>