force-app/main/default/objects/Loan_Applicant__c/fields/Official_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Official_Email_ID__c</fullName>
    <label>Official Email ID</label>
    <type>Email</type>
</CustomField>