force-app/main/default/objects/Loan_Applicant__c/fields/Other_Constitution__c.field-meta.xml
<CustomField>
    <fullName>Other_Constitution__c</fullName>
    <label>Other Constitution</label>
    <length>50</length>
    <type>Text</type>
</CustomField>