force-app/main/default/objects/Loan_Applicant__c/fields/Pan_Number_Spouse__c.field-meta.xml
<CustomField>
    <fullName>Pan_Number_Spouse__c</fullName>
    <label>Pan Number(Spouse)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>