force-app/main/default/objects/Loan_Applicant__c/fields/PAN_Verification__c.field-meta.xml
<CustomField>
    <fullName>PAN_Verification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PAN Verification</label>
    <referenceTo>Verification__c</referenceTo>
    <relationshipLabel>Loan Applicants</relationshipLabel>
    <relationshipName>Loan_Applicants</relationshipName>
    <type>Lookup</type>
</CustomField>