force-app/main/default/objects/Loan_Applicant__c/fields/Passport__c.field-meta.xml
<CustomField>
    <fullName>Passport__c</fullName>
    <label>Passport</label>
    <length>200</length>
    <type>Text</type>
</CustomField>