force-app/main/default/objects/Loan_Applicant__c/fields/Perfios_Verification__c.field-meta.xml
<CustomField>
    <fullName>Perfios_Verification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Perfios Verification</label>
    <referenceTo>Verification__c</referenceTo>
    <relationshipLabel>Loan Applicants (Verification)</relationshipLabel>
    <relationshipName>Loan_Applicants8</relationshipName>
    <type>Lookup</type>
</CustomField>