force-app/main/default/objects/Loan_Applicant__c/fields/Place_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Place_Of_Birth__c</fullName>
    <label>Place Of Birth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>