force-app/main/default/objects/Loan_Applicant__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <label>Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other Source</fullName>
                <default>true</default>
                <label>Other Source</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>