force-app/main/default/objects/Loan_Applicant__c/fields/Politically_Exposed_Person__c.field-meta.xml
<CustomField>
    <fullName>Politically_Exposed_Person__c</fullName>
    <label>Politically Exposed Person</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>