force-app/main/default/objects/Loan_Applicant__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <label>Product Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CV/CE</fullName>
            </value>
            <value>
                <fullName>Business Loan Plus</fullName>
            </value>
            <value>
                <fullName>Business Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>