force-app/main/default/objects/Loan_Applicant__c/fields/RBI_Defaulter_List_Status__c.field-meta.xml
<CustomField>
    <fullName>RBI_Defaulter_List_Status__c</fullName>
    <label>RBI Defaulter List Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Not Verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>