force-app/main/default/objects/Loan_Applicant__c/fields/Registration_Membership_No__c.field-meta.xml
<CustomField>
    <fullName>Registration_Membership_No__c</fullName>
    <label>Registration / Membership No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>