force-app/main/default/objects/Loan_Applicant__c/fields/Relationship_with_Director_Senior_Offic__c.field-meta.xml
<CustomField>
    <fullName>Relationship_with_Director_Senior_Offic__c</fullName>
    <label>Relationship(Director/Senior Officer)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>