force-app/main/default/objects/Loan_Applicant__c/fields/Religion__c.field-meta.xml
<CustomField>
    <fullName>Religion__c</fullName>
    <label>Religion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hindu</fullName>
            </value>
            <value>
                <fullName>Muslim</fullName>
            </value>
            <value>
                <fullName>Sikh</fullName>
            </value>
            <value>
                <fullName>Zoroastrian</fullName>
            </value>
            <value>
                <fullName>Christian</fullName>
            </value>
            <value>
                <fullName>Buddhist</fullName>
            </value>
            <value>
                <fullName>Jain</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>