force-app/main/default/objects/Loan_Applicant__c/fields/Residential_Status__c.field-meta.xml
<CustomField>
    <fullName>Residential_Status__c</fullName>
    <label>Residential Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resident Indian</fullName>
            </value>
            <value>
                <fullName>Non-Resident Indian</fullName>
            </value>
            <value>
                <fullName>Foreign National</fullName>
            </value>
            <value>
                <fullName>Person of Indian Origin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>