force-app/main/default/objects/Loan_Applicant__c/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <label>Salutation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mr.</fullName>
            </value>
            <value>
                <fullName>Ms.</fullName>
            </value>
            <value>
                <fullName>Mrs.</fullName>
            </value>
            <value>
                <fullName>Dr.</fullName>
            </value>
            <value>
                <fullName>Prof.</fullName>
            </value>
            <value>
                <fullName>M/s.</fullName>
            </value>
            <value>
                <fullName>Doctor</fullName>
                <isActive>false</isActive>
                <label>Doctor</label>
            </value>
            <value>
                <fullName>Mr</fullName>
                <isActive>false</isActive>
                <label>Mr</label>
            </value>
            <value>
                <fullName>Mrs</fullName>
                <isActive>false</isActive>
                <label>Mrs</label>
            </value>
            <value>
                <fullName>Ms</fullName>
                <isActive>false</isActive>
                <label>Ms</label>
            </value>
            <value>
                <fullName>Profession</fullName>
                <isActive>false</isActive>
                <label>Profession</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>