force-app/main/default/objects/Loan_Applicant__c/fields/ScoreCard_Verification__c.field-meta.xml
<CustomField>
    <fullName>ScoreCard_Verification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ScoreCard Verification</label>
    <referenceTo>Verification__c</referenceTo>
    <relationshipLabel>Loan Applicants (ScoreCard Verification)</relationshipLabel>
    <relationshipName>Loan_Applicants6</relationshipName>
    <type>Lookup</type>
</CustomField>